// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Twitter \`triangle="hide"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-twitter twitter-picker"
    style="width: 276px; background: rgb(255, 255, 255); border: 0px solid rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.25); box-shadow: 0 1px 4px rgba(0,0,0,0.25); -webkit-border-radius: 4px; border-radius: 4px; position: relative;"
  >
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 9px 10px; border-color: transparent transparent rgba(0, 0, 0, 0.1); position: absolute; display: none;"
    />
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 9px 10px; border-color: transparent transparent rgb(255, 255, 255); position: absolute; display: none;"
    />
    <div
      style="padding: 15px 9px 9px 15px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(255, 105, 0); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#FF6900"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(252, 185, 0); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#FCB900"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(123, 220, 181); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#7BDCB5"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 208, 132); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#00D084"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(142, 209, 252); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#8ED1FC"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(6, 147, 227); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#0693E3"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(171, 184, 195); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#ABB8C3"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(235, 20, 76); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#EB144C"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(247, 141, 167); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#F78DA7"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(153, 0, 239); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#9900EF"
        />
      </span>
      <div
        style="background: rgb(240, 240, 240); height: 30px; width: 30px; -webkit-border-radius: 4px 0 0 4px; border-radius: 4px 0 0 4px; float: left; color: rgb(152, 161, 164); display: flex; align-items: center; -webkit-justify-content: center; justify-content: center;"
      >
        #
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-3"
          spellcheck="false"
          style="width: 100px; font-size: 14px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 28px; -webkit-box-shadow: inset 0 0 0 1px #F0F0F0; box-shadow: inset 0 0 0 1px #F0F0F0; box-sizing: content-box; -webkit-border-radius: 0 4px 4px 0; border-radius: 0 4px 4px 0; float: left; padding-left: 8px;"
          value="22194D"
        />
      </div>
      <div
        style="clear: both;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Twitter \`triangle="top-right"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-twitter twitter-picker"
    style="width: 276px; background: rgb(255, 255, 255); border: 0px solid rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.25); box-shadow: 0 1px 4px rgba(0,0,0,0.25); -webkit-border-radius: 4px; border-radius: 4px; position: relative;"
  >
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 9px 10px; border-color: transparent transparent rgba(0, 0, 0, 0.1); position: absolute; top: -11px; right: 12px;"
    />
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 9px 10px; border-color: transparent transparent rgb(255, 255, 255); position: absolute; top: -10px; right: 12px;"
    />
    <div
      style="padding: 15px 9px 9px 15px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(255, 105, 0); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#FF6900"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(252, 185, 0); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#FCB900"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(123, 220, 181); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#7BDCB5"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 208, 132); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#00D084"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(142, 209, 252); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#8ED1FC"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(6, 147, 227); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#0693E3"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(171, 184, 195); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#ABB8C3"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(235, 20, 76); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#EB144C"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(247, 141, 167); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#F78DA7"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(153, 0, 239); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#9900EF"
        />
      </span>
      <div
        style="background: rgb(240, 240, 240); height: 30px; width: 30px; -webkit-border-radius: 4px 0 0 4px; border-radius: 4px 0 0 4px; float: left; color: rgb(152, 161, 164); display: flex; align-items: center; -webkit-justify-content: center; justify-content: center;"
      >
        #
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-4"
          spellcheck="false"
          style="width: 100px; font-size: 14px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 28px; -webkit-box-shadow: inset 0 0 0 1px #F0F0F0; box-shadow: inset 0 0 0 1px #F0F0F0; box-sizing: content-box; -webkit-border-radius: 0 4px 4px 0; border-radius: 0 4px 4px 0; float: left; padding-left: 8px;"
          value="22194D"
        />
      </div>
      <div
        style="clear: both;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Twitter renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-twitter twitter-picker"
    style="width: 276px; background: rgb(255, 255, 255); border: 0px solid rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.25); box-shadow: 0 1px 4px rgba(0,0,0,0.25); -webkit-border-radius: 4px; border-radius: 4px; position: relative;"
  >
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 9px 10px; border-color: transparent transparent rgba(0, 0, 0, 0.1); position: absolute; top: -11px; left: 12px;"
    />
    <div
      style="width: 0px; height: 0px; border-style: solid; border-width: 0px 9px 10px; border-color: transparent transparent rgb(255, 255, 255); position: absolute; top: -10px; left: 12px;"
    />
    <div
      style="padding: 15px 9px 9px 15px;"
    >
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(255, 105, 0); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#FF6900"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(252, 185, 0); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#FCB900"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(123, 220, 181); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#7BDCB5"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(0, 208, 132); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#00D084"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(142, 209, 252); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#8ED1FC"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(6, 147, 227); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#0693E3"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(171, 184, 195); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#ABB8C3"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(235, 20, 76); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#EB144C"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(247, 141, 167); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#F78DA7"
        />
      </span>
      <span>
        <div
          class="rc-swatch"
          style="background: rgb(153, 0, 239); width: 30px; height: 30px; float: left; -webkit-border-radius: 4px; border-radius: 4px; margin: 0px 6px 6px 0px;"
          tabindex="0"
          title="#9900EF"
        />
      </span>
      <div
        style="background: rgb(240, 240, 240); height: 30px; width: 30px; -webkit-border-radius: 4px 0 0 4px; border-radius: 4px 0 0 4px; float: left; color: rgb(152, 161, 164); display: flex; align-items: center; -webkit-justify-content: center; justify-content: center;"
      >
        #
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-1"
          spellcheck="false"
          style="width: 100px; font-size: 14px; color: rgb(102, 102, 102); border: 0px; outline: none; height: 28px; -webkit-box-shadow: inset 0 0 0 1px #F0F0F0; box-shadow: inset 0 0 0 1px #F0F0F0; box-sizing: content-box; -webkit-border-radius: 0 4px 4px 0; border-radius: 0 4px 4px 0; float: left; padding-left: 8px;"
          value="22194D"
        />
      </div>
      <div
        style="clear: both;"
      />
    </div>
  </div>
</DocumentFragment>
`;
